<resources>
    <string name="app_name">LeafNote</string>

    <!--String menu-->
    <string name="item_menu_1">Trang chủ</string>
    <string name="item_menu_2">Lối tắt</string>
    <string name="item_menu_3">Ghi chú</string>
    <string name="item_menu_4">Nhiệm vụ</string>
    <string name="item_menu_5">Sổ tay</string>
    <string name="item_menu_6">Thẻ</string>
    <string name="item_menu_7">Đã chia sẻ với tôi</string>
    <string name="item_menu_8">Thùng rác</string>

    <string name="navigation_drawer_open">Open nav</string>
    <string name="navigation_drawer_close">Close nav</string>
</resources>